# src/models/userModel.js
@@ -30,10 +30,6 @@ const userSchema = new mongoose.Schema(
   { timestamps: true }
 );
 
-// Create indexes for frequently queried fields
-userSchema.index({ email: 1 });
-userSchema.index({ username: 1 });
-
 /**
  * Hash password before saving
  */
